--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ authors = ["Paul Hüber <phueber@kernsp.in>"]
 
 [dependencies]
 structopt = "0.2"
+
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
